--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "egg": "^3.17.5",
     "egg-cors": "^2.2.3",
+    "egg-jwt": "^3.1.7",
+    "egg-mysql": "^4.0.0",
     "egg-scripts": "^2.11.0",
     "egg-view-ejs": "^2.0.1"
   },
@@ -19,7 +21,8 @@
     "egg-ci": "^1.11.0",
     "egg-mock": "^3.21.0",
     "eslint": "^5.13.0",
-    "eslint-config-egg": "^7.1.0"
+    "eslint-config-egg": "^7.1.0",
+    "prettier": "^3.1.0"
   },
   "engines": {
     "node": ">=10.0.0"
