--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "egg-jwt": "^3.1.7",
     "egg-mysql": "^4.0.0",
     "egg-scripts": "^2.11.0",
-    "egg-view-ejs": "^2.0.1"
+    "egg-view-ejs": "^2.0.1",
+    "mkdirp": "^3.0.1",
+    "moment": "^2.29.4"
   },
   "devDependencies": {
     "autod": "^3.0.1",
